[package]
name = "summa-solvency-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-bigint = "0.4"
halo2_proofs = { git = "https://github.com/summa-dev/halo2"}

[dependencies.summa-solvency]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "operation_helpers"
path = "fuzz_targets/operation_helpers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "build_leaves_from_entries"
path = "fuzz_targets/build_leaves_from_entries.rs"
test = false
doc = false
bench = false
